jhove goes up to 11, java11 🚀🎸🎶⑪⑾⒒⓫
* can be compiled on java11 as java8 or java11 code
* remove a lot of deprecated uses of code
* use some intellij ide suggestion, including lambdas
* `Module` was confusing things - don't use wildcard imports
* upgrade some libraries for jvm compatibility
* DatatypeConverter has been removed - added a test for this class
  then reimplemented it for use in the wave module